<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FrostVakt</string>
    <string name="title_activity_alarm_list">Mina Alarm</string>
    <string name="title_Alarm">Alarm</string>
    <string name="title_weatherwarnings">Vädervarningar</string>
    
    <string name="yr">Værvarsel fra yr.no, levert av NRK og Meteorologisk institutt" url="http://www.yr.no/sted/Sverige/Västerbotten/Umeå/</string>
    <string name="action_settings">Inställningar</string>
    <string name="action_alarm"> Skapa Alarm</string>
    <string name="action_myAlarms">Mina Alarm</string>
    <string name="action_main">Förstasidan</string>
    <string name="action_search">Sök</string>
    <string name="action_delete">Ta bort</string>
    <string name="action_clear">Rensa varningar</string>
    <string name="action_position">Ställ in min position</string>
    <string name="action_toggle_poll">Slå på automatisk hämtning</string>
    <string name="action_toggle_poll_turn_off">Slå av automatisk hämtning</string>
    <string name="action_refresh_data">Hämta data nu</string>
    <string name="action_warnings">Mina vädervarningar</string>
    
    <string name="first_time_instruction">Ingen  prognos tillgänglig, ställ in position och välj sedan Hämta data i menyn</string>
    
    <string name="button_createAlarm">Skapa Alarm</string>
    <string name="frost">Inatt sjunker temperaturen under 0 grader</string>
    <string name="frost_warning_big">Inatt sjunker temperaturen under 0 grader, skydda alla känsliga växter!</string>
    <string name="max_temperature">Högsta temperatur: </string>
    <string name="min_temperature">Lägsta Temperatur: </string>
    <string name="temperature">Temperatur: </string>
    <string name="windSpeed">Vindhastighet: </string>
    <string name="windDir">Vindriktning:</string>
    <string name="precipitation">Nederbörd:</string>
    <string name="Warn">Varna när</string>
    <string name="is">är</string>
    <string name="and">och</string>
    <string name="editText_number_hint">Skriv in siffran här</string>
    <string name="editText_message_hint">Skriv in ett kort meddelande här</string>
    <string name="textView_message">Meddelande:</string>

    <string-array name="parameters">
        <item name="temp">Temperaturen</item>
        <!-- <item name="windSpeed">Vindhastigheten</item>  begränsar omfattningen just nu -->
    </string-array>
    <string-array name="logicalOperators">
        <item name="less">Under</item>
        <item name="above">Över</item>
        <!-- <item name="between">Mellan</item> begränsar omfattningen -->
    </string-array>

   

</resources>
