<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
<!-- Alarm, should appear as action button -->
    <item android:id="@+id/action_alarm"
          android:icon="@drawable/ic_action_add_alarm"
          android:title="@string/action_alarm"
          android:showAsAction="ifRoom|withText" />
    
    
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    
    
    <!-- Alarm, should always be in the overflow -->
    <item android:id="@+id/action_my_alarms"
          android:icon="@drawable/ic_action_alarms"
          android:title="@string/action_myAlarms"
          android:showAsAction="never" />
    
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_toggle_poll"
          android:title="@string/action_toggle_poll"
          android:showAsAction="never" />
    
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />
</menu>
