<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="karro.spike.weatherdataspike.WeatherWarningActivity" >

       
<!-- Alarm, should not appear as action button -->
    <item android:id="@+id/action_alarm"
          android:icon="@drawable/ic_action_add_alarm"
          android:title="@string/action_alarm"
          android:showAsAction="never" />
    
     <!-- Clear, should appear as action button -->
     <item android:id="@+id/action_clear"
          android:icon="@drawable/ic_action_discard"
          android:title="@string/action_clear"
          android:showAsAction="ifRoom|withText" />
    
    
   
     <!-- Position, should appear as action button or be in the overflow --> 
    <item android:id="@+id/action_position"
          android:icon="@drawable/ic_action_place"
          android:title="@string/action_position"
          android:showAsAction="ifRoom|withText" />
    
    <!-- Alarmlist, should always be in the overflow -->
    <item android:id="@+id/action_my_alarms"
          android:icon="@drawable/ic_action_alarms"
          android:title="@string/action_myAlarms"
          android:showAsAction="never" />
    
        <!-- Main, should always be in the overflow -->
    <item android:id="@+id/action_main"
          android:title="@string/action_main"
          android:showAsAction="never" />
    
   
   <!-- Settings, should always be in the overflow -->
    <!--  <item android:id="@+id/action_settings"  removed , theres nothing to put into it in this version
          android:title="@string/action_settings"
          android:showAsAction="never" /> -->
           <!-- Search,  should always be in the overflow  -->
    <!-- <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="never" /> -->
</menu>
