<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/placeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kåge"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/dayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2015-05-15"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/placeTextView" />

    <LinearLayout
        android:id="@+id/maxTemplinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/dayTextView">

        <TextView
            android:id="@+id/maxTempLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_temperature"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

        <TextView
            android:id="@+id/maxTempTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15grader Celcius" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/maxTemplinearLayout">

        <TextView
            android:id="@+id/minTempLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_temperature"             
        	android:textAppearance="?android:attr/textAppearanceSmall"
        />

        <TextView
            android:id="@+id/minTempTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-3 grader Celcius" />

    </LinearLayout>
    <TextView
            android:id="@+id/yr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yr"             
        	android:textAppearance="?android:attr/textAppearanceSmall"
        	android:autoLink="web"
        	android:layout_gravity="bottom"
        	android:layout_alignParentBottom="true"
        />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/frost_pic" 
        android:visibility="invisible"
        android:enabled="false"
    	android:layout_alignParentBottom="true"/>m
	
</RelativeLayout>
